# mindmark

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  version-bump.yml
assets/: demo-find.tape  demo-hero.tape  demo-stats.tape
src/mindmark/: __init__.py  cli.py  index.py  parser.py
src/mindmark/browsers/: __init__.py  chromium.py  firefox.py  paths.py
tests/: test_browser_detection.py  test_browsers_init.py  test_chromium_parser.py  test_firefox_parser.py  test_incremental_sync.py  test_parser.py
