[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindmark"
version = "0.1.2"
description = "Local semantic search over your browser bookmarks — on-device embeddings, no cloud."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Sukanth Gunda" }]
keywords = ["bookmarks", "semantic-search", "embeddings", "cli", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "fastembed>=0.3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7", "build", "twine"]

[project.scripts]
mindmark = "mindmark.cli:main"

[project.urls]
Homepage = "https://github.com/sukanth/mindmark"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mindmark" = ["py.typed"]
